--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,21 @@
+:root {
+    --bcdark: rgb(148, 5, 5);
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+body {
+    background-color: #d9dcd6;
+}
 
-
+/*header styling*/
 header {
     display: flex;
+    flex: wrap;
     position:fixed;
     padding:20px;
     top: 0;
@@ -15,17 +23,13 @@ header {
     width:100%;
     height: 10%;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: rgb(148, 5, 5);
+    background-color: var(--bcdark);
     color: #ffffff;
     flex-direction: row;
-    justify-content: space-between;
-      
+    justify-content: space-between;  
 }
 
-body {
-    background-color: #d9dcd6;
-}
-
+/*nav bar styling*/
 ul li {
     display: inline-block;    
     list-style-type: none;
@@ -40,7 +44,6 @@ li a{
 nav a:hover {
     color: black;
   }
-
 
 .about {
     padding-top: 75px;
@@ -78,6 +81,10 @@ main img {
 .work {
     padding-bottom:30px;
 }
+
+#work1 {
+    font weight:bold;
+    }
 
 .worksection {
     width: 75%;
@@ -144,7 +151,7 @@ footer {
     width:100%;
     height: 10%;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: rgb(148, 5, 5);
+    background-color: var(--bcdark);
     color: #ffffff;
     flex-direction: row;
     justify-content: center;
@@ -157,7 +164,7 @@ footer {
     header,
   nav {
     flex-direction: column;
-    justify-content: ;
+    justify-content: center ;
   }
 }
 
