--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 :root {
-    --bcdark: rgb(148, 5, 5);
-}
+  --bhfdark: rgb(148, 5, 5);
 
+}
 * {
     box-sizing: border-box;
     padding: 0;
@@ -10,26 +10,30 @@
 
 body {
     background-color: #d9dcd6;
-}
-
-/*header styling*/
-header {
     display: flex;
-    flex: wrap;
-    position:fixed;
-    padding:20px;
-    top: 0;
-    left: 0;
+    flex-direction: column;
+    line-height: 1.3;
+}
+/* hader styling*/  
+header {
+    position: fixed;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    padding: 20px;
+    justify-content: space-between;
     width:100%;
     height: 10%;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: var(--bcdark);
-    color: #ffffff;
-    flex-direction: row;
-    justify-content: space-between;  
-}
+    background-color: var(--bhfdark);
+    color: #fff;
+    font-size: large;
+    font-weight: bold;
+  }
 
-/*nav bar styling*/
+header :hover {
+    color: black;
+  }
+/* nav bar stylin */
 ul li {
     display: inline-block;    
     list-style-type: none;
@@ -45,8 +49,26 @@ nav a:hover {
     color: black;
   }
 
+main {
+    margin: 20px;
+}
+
 .about {
     padding-top: 75px;
+}
+
+h2 {
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+
+.aboutsection img {
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1 0 200px;
+    flex-direction: column;
+    width: 70%; 
 }
 
 .aboutsection {
@@ -58,89 +80,29 @@ nav a:hover {
     float: left;
 }
 
-main {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-main section h2 {
-    flex:1;
-    font-weight: bold;
-    padding-left: 20px;
-    margin-top: 20px;
-    width: auto;
-   }
-
-main img {
-    margin:50px;
-    width: 70%;
-    margin:10px;
-    padding-left: 20px;
-}
-
 .work {
-    padding-bottom:30px;
+    padding-top:30%;
 }
+/*.project{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}*/
 
-#work1 {
-    font weight:bold;
-    }
-
-.worksection {
-    width: 75%;
-    float: left;
-}
-.worksection1 {
-    width: 25%;
-    float: left;
-}
-
-.work img{
-        margin:50px;
-        width: 95%;
-        margin:10px;
-        padding-left: 20px;
-        
-}
-
-main section p {
-    display:block;
-    font-size: large;
-    padding-left: 20px;
-
-}
-  
-
-section .work img {
-    flex: 3;
-    width:100%;
-    margin-top: 30px;
-}
-
-main section p {
-    padding-bottom: 75px;
+section .card1 img{
+    width:30px;
+    height:10%;
 }
 
 
-#contact {
+
+
+.contact {
     padding-bottom:15px ;
     padding-left: 20px;
 }
-
-form {
-    width: 70%;
-    margin: 0 auto 100px auto;
-   }
-
-form fieldset{
-    border:none;
-    margin-bottom:12px;  
-            }
-
-form label {
-    display: block;
-    padding:2px;
-          }
 
 footer {
     display: flex;
@@ -151,23 +113,8 @@ footer {
     width:100%;
     height: 10%;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: var(--bcdark);
+    background-color: var(--bhfdark);
     color: #ffffff;
     flex-direction: row;
     justify-content: center;
 }
-
-/* When using `max-width` as the breakpoint, you must go from widest to narrowest to avoid conflict */
-
-/* Tablets - header changes color */
-@media screen and (max-width: 768px) {
-    header,
-  nav {
-    flex-direction: column;
-    justify-content: center ;
-  }
-}
-
-  
-  
-  
