--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,27 +81,59 @@ h2 {
 }
 
 .work {
-    padding-top:30%;
+    padding-top:10%;
 }
-/*.project{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-}*/
 
-section .card1 img{
-    width:30px;
-    height:10%;
+.card {
+    border-style: solid;
+    border-width: 1px;
+    padding: 10px;
+    float: left;
+    width: 25%;
+  }
+
+  .card p {
+    text-align: center;
+  }
+  
+
+.workDiv {
+    width:100%;
+    height:40%;
+}
+.card img{
+    width:100%;
+    height:100%;
+    float:left;
+    margin: 1%;
+}
+
+.card1 img{
+    width:100%;
+    height:100%;
+    float:left;
+    margin: 1%;
+}
+
+.card2 img{
+    width:100%;
+    height:100%;
+    float:left;
+    margin: 1%;
 }
 
 
 
 
 .contact {
-    padding-bottom:15px ;
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1 0 200px;
+    margin-top: 10%;
     padding-left: 20px;
+    font-weight: bold;
+    text-align: center;
+    justify-content: center;
 }
 
 footer {
@@ -118,3 +150,32 @@ footer {
     flex-direction: row;
     justify-content: center;
 }
+
+
+
+/* Cards are split into two columns at 992px or smaller */
+@media screen and (max-width: 992px) {
+    .card {
+      width: 50%;
+    }
+    .card1 {
+        width: 50%;
+    }
+    .card2 {
+        width: 50%;
+    }
+   
+} 
+  /* Cards are stacked on top of each other at 768px or smaller */
+  @media screen and (max-width: 768px) {
+    .card {
+      width: 100%;
+    }
+    .card1 {
+        width: 50%;
+    }
+    .card2 {
+        width: 50%;
+    }
+   
+  }
