--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 :root {
   --bhfdark: rgb(148, 5, 5);
+  --color: #fff;
+  --black:black;
 
 }
 * {
@@ -13,6 +15,10 @@ body {
     display: flex;
     flex-direction: column;
     line-height: 1.3;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: medium;
+    padding-right: 20px;
 }
 /* hader styling*/  
 header {
@@ -25,15 +31,16 @@ header {
     width:100%;
     height: 10%;
     background-color: var(--bhfdark);
-    color: #fff;
+    color: var(--color);
     font-size: large;
     font-weight: bold;
+   
   }
 
 header :hover {
-    color: black;
+    color: var(--black);
   }
-/* nav bar stylin */
+/* nav bar styling*/
 ul li {
     display: inline-block;    
     list-style-type: none;
@@ -46,13 +53,10 @@ li a{
 }
 
 nav a:hover {
-    color: black;
+    color: var(--black);
   }
 
-main {
-    margin: 20px;
-}
-
+/*about styling*/
 .about {
     padding-top: 75px;
 }
@@ -80,6 +84,7 @@ h2 {
     float: left;
 }
 
+/*work section styling*/
 .work {
     padding-top:10%;
 }
@@ -122,7 +127,7 @@ h2 {
     margin: 1%;
 }
 
-
+/*contact styling*/
 
 
 .contact {
@@ -136,6 +141,7 @@ h2 {
     justify-content: center;
 }
 
+/*footer styling*/
 footer {
     display: flex;
     position:fixed;
@@ -146,7 +152,7 @@ footer {
     height: 10%;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: var(--bhfdark);
-    color: #ffffff;
+    color: var(--color);
     flex-direction: row;
     justify-content: center;
 }
@@ -169,7 +175,7 @@ footer {
   /* Cards are stacked on top of each other at 768px or smaller */
   @media screen and (max-width: 768px) {
     .card {
-      width: 100%;
+      width: 50%;
     }
     .card1 {
         width: 50%;
