--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,187 +1,210 @@
-:root {
-  --bhfdark: rgb(148, 5, 5);
-  --color: #fff;
-  --black:black;
-
-}
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-body {
-    background-color: #d9dcd6;
-    display: flex;
-    flex-direction: column;
-    line-height: 1.3;
-    margin-left: 20px;
-    margin-right: 20px;
-    font-size: medium;
-    padding-right: 20px;
-}
-/* hader styling*/  
+/* Header Styling */
 header {
     position: fixed;
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    padding: 20px;
+    background-color: red;
+    width: 100%;
+    height: 100px;
+    top: 0;
+    left: 0;
     justify-content: space-between;
-    width:100%;
-    height: 10%;
-    background-color: var(--bhfdark);
-    color: var(--color);
+    flex-direction: row;
+    color: white;
     font-size: large;
     font-weight: bold;
-   
-  }
+}
 
-header :hover {
-    color: var(--black);
-  }
-/* nav bar styling*/
-ul li {
-    display: inline-block;    
+header:hover {
+    color:black;
+}
+
+/* Styling for Header Navigation Bar */
+nav ul {
+    display:inline-flex;
     list-style-type: none;
-    color: white;    
+    padding-top: 35px;
+    
 }
 
-li a{
+nav ul li a{
     color: white;
-    padding: 20px;   
+    list-style-type: none;
+    margin-top:20px;
+    margin: 50px;
+    padding-bottom: 30px;
 }
 
-nav a:hover {
-    color: var(--black);
-  }
-
-/*about styling*/
-.about {
-    padding-top: 75px;
+/* Styling For Mobile Container */
+.mobile-container {
+    display: none;
+}
+a:hover {
+    color:black;
 }
 
-h2 {
+/* Styling For About me Section */
+section h2 {
     font-weight: bold;
-    text-decoration: underline;
+    font-size: 50px;
+    
 }
 
-
-.aboutsection img {
+#about {
     display: flex;
     flex-wrap: wrap;
-    flex: 1 0 200px;
-    flex-direction: column;
-    width: 70%; 
+    padding-top: 5%;
+    margin-left: 20px;
+ }
+
+ #about {
+      display: flex;
+      flex: wrap;
+ }
+
+ .aboutme img{
+     width: 20%;
+ }
+
+ .aboutme p{
+     width: 70%;
+     float: right;
+ }
+ 
+ /* Styling For Work Section */
+#work h2{
+    padding-top: 5%;
+    margin-left: 20px;
+    
 }
 
-.aboutsection {
-    width: 30%;
-    float: left;
-}
-.aboutsection1 {
-    width: 70%;
-    float: left;
-}
-
-/*work section styling*/
-.work {
-    padding-top:10%;
-}
-
-.card {
-    border-style: solid;
-    border-width: 1px;
-    padding: 10px;
-    float: left;
-    width: 25%;
-  }
-
-  .card p {
-    text-align: center;
-  }
-  
-
-.workDiv {
-    width:100%;
-    height:40%;
-}
-.card img{
-    width:100%;
-    height:100%;
-    float:left;
-    margin: 1%;
-}
-
-.card1 img{
-    width:100%;
-    height:100%;
-    float:left;
-    margin: 1%;
-}
-
-.card2 img{
-    width:100%;
-    height:100%;
-    float:left;
-    margin: 1%;
-}
-
-/*contact styling*/
-
-
-.contact {
+/* Styling For Projects Section */
+.container {
     display: flex;
     flex-wrap: wrap;
-    flex: 1 0 200px;
-    margin-top: 10%;
-    padding-left: 20px;
-    font-weight: bold;
-    text-align: center;
-    justify-content: center;
+    flex-direction:row;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 
-/*footer styling*/
+/* Styling For Project Movie Advisor */
+.card1 {
+  display: flex;
+  flex-wrap: wrap;
+  width: 30%;
+  padding: 5px;
+}
+
+/* Styling For Work Schedular */
+.card2  {
+  display: flex;
+  flex-wrap: wrap;
+  width: 30%;
+  padding: 5px;
+}
+
+/* Styling For Weather Forecast */
+.card3 {
+  display: flex;
+  flex-wrap: wrap;
+  width: 30%;
+  padding: 5px;
+}
+
+.card1 img,.card2 img,.card3 img {
+    width: 100%;
+}
+
+/* Styling For Contact Section */
+#contact {
+    margin-top: 15%;
+    margin-bottom: 22%;
+    font-weight: bold;
+    text-align: center;
+    
+}
+
+/* Styling For Footer */
 footer {
+    position: fixed;
     display: flex;
-    position:fixed;
-    padding:20px;
+    background-color: red;
+    width: 100%;
+    height: 100px;
     bottom: 0;
     left: 0;
-    width:100%;
-    height: 10%;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: var(--bhfdark);
-    color: var(--color);
-    flex-direction: row;
     justify-content: center;
+    flex-direction: column;
+    color: white;
+    font-size: large;
+    font-weight: bold;
+    text-align: center;
 }
 
+/* Cards are split into two columns at 568px or smaller */
+@media screen and (max-width:568px) {
 
-
-/* Cards are split into two columns at 992px or smaller */
-@media screen and (max-width: 992px) {
-    .card {
-      width: 50%;
-    }
     .card1 {
-        width: 50%;
+      width: 100%;
     }
     .card2 {
-        width: 50%;
+        width: 100%;
     }
-   
+    .card3 {
+        width: 100%;
+    }
+  
+      ul {
+          list-style:none;
+      }
+      .topnav {
+        overflow: hidden;
+        background-color: #333;
+        position: relative;
+      }
+      
+      .topnav #myLinks {
+        display: none;
+      }
+      
+     
+      
+      .topnav a.icon {
+        background: black;
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 0;
+      }
+      
+      .topnav a:hover {
+        
+        color: white;
+      }
+      
+      .active {
+        background-color: red;
+        color: white;
+      }
+    
+    .mobile-container {
+        display: block;
+    }
+    .menu-container {
+        display:none;
+    }
+    .topnav a {
+        color: white;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+        display: block;
+      }
+      
 } 
-  /* Cards are stacked on top of each other at 768px or smaller */
-  @media screen and (max-width: 768px) {
-    .card {
-      width: 50%;
-    }
-    .card1 {
-        width: 50%;
-    }
-    .card2 {
-        width: 50%;
-    }
-   
-  }
